# ai-novel-agent

./: .gitignore  [input removed due to failed tool call]  index.html  package-lock.json  package.json  vite.config.ts
.sisyphus/: boulder.json
.sisyphus/drafts/: project-improvement-planning.md
.sisyphus/evidence/: task-1-capabilities.txt  task-1-cargo-build.txt  task-1-smoke.txt  task-2-types.txt  task-3-chapter-service.txt  task-4-contextbus.txt  task-5-aiservice.txt
.sisyphus/notepads/chapter-summary/: learnings.md
.sisyphus/notepads/chat-editor-features/: issues.md  learnings.md
.sisyphus/notepads/note_ai/: learnings.md
.sisyphus/notepads/outline-view-enhancement/: decisions.md  learnings.md
.sisyphus/notepads/persistence-and-ui-improvement/: learnings.md
.sisyphus/notepads/project-outline/: learnings.md
.sisyphus/plans/: ai-novel-agent.md  chat-editor-features.md  persistence-and-ui-improvement.md
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Layout.tsx
src/components/ai/: AIErrorBoundary.tsx  AISidebar.tsx  ChatHistory.tsx  ChatInput.tsx  ChatMessages.tsx  InlineCommand.tsx  SelectionHoverBar.tsx
src/components/character/: CharacterModal.tsx
src/contexts/: NovelContext.tsx
src/pages/: Project.tsx  ProjectList.tsx  Settings.tsx  SkillManager.tsx
src/schemas/: index.ts
src/test/: smoke.test.tsx  utils.tsx
src/types/: chat.ts  llm.ts  novel.ts  rag.ts  skill.ts
(+74 files in other folders)
