[package]
name = "ai-novel-agent"
version = "0.1.0"
description = "AI Novel Writing Assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_novel_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = "1"
serde_json = "1"
tauri-plugin-sql = "2.4.0"
tauri-plugin-fs = "2.5.1"
